add_subdirectory(Utilities)
add_subdirectory(RecoDataProducts)
add_subdirectory(MCDataProducts)
add_subdirectory(Reconstruction)
add_subdirectory(Simulations)
add_subdirectory(Analyzers)
add_subdirectory(DataProducts)
add_subdirectory(PDT)
add_subdirectory(Conditions)
add_subdirectory(Geometry)
add_subdirectory(HelloWorldScripts)
add_subdirectory(inputFiles)
add_subdirectory(databaseFiles)
add_subdirectory(fcl)
